# myth

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README_CN.md  README_zh.md  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  python-publish.yml
benches/: render_graph_bench.rs
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/docs/: API.md  API_CN.md  UserGuide.md  UserGuide_CN.md
bindings/python/examples/: __asset_utils.py  bloom_demo.py  demo.py  earth.py  gaussian_splatting.py  glfw_demo.py  gltf_viewer.py  headless_readback_test.py  headless_simple_test.py  headless_stream_test.py  morph.py  pyside_demo.py  rendercanvas_demo.py  shadows.py  sponza.py
bindings/python/myth/: __init__.py  __init__.pyi
bindings/python/src/: animation.rs  app.rs  camera.rs  controls.rs  engine_proxy.rs  gaussian.rs  geometry.rs  input.rs  lib.rs  light.rs  material.rs  readback.rs  renderer.rs  scene.rs  texture.rs
crates/myth_animation/: Cargo.toml
crates/myth_animation/src/: action.rs  binder.rs  binding.rs  blending.rs  clip.rs  events.rs  lib.rs  mixer.rs  system.rs  target.rs  tracks.rs  values.rs
crates/myth_app/: Cargo.toml
crates/myth_app/src/: app.rs  engine.rs  lib.rs  orbit_controls.rs
crates/myth_app/src/winit/: input_adapter.rs  mod.rs
crates/myth_assets/: Cargo.toml
crates/myth_assets/src/: handle.rs  io.rs  lib.rs  manager.rs  prefab.rs  resolve.rs  scene_ext.rs  server.rs  skeleton_asset.rs  storage.rs
crates/myth_assets/src/loaders/: gltf.rs  mod.rs  npz.rs  ply.rs
crates/myth_core/: Cargo.toml
crates/myth_core/src/: errors.rs  handles.rs  lib.rs  transform.rs
crates/myth_core/src/utils/: fps_counter.rs  interner.rs  mod.rs  time.rs
crates/myth_dev_utils/: Cargo.toml
crates/myth_dev_utils/src/: lib.rs  ui_pass.rs
crates/myth_macros/: Cargo.toml
crates/myth_macros/src/: codegen.rs  gpu_struct_codegen.rs  gpu_struct_parse.rs  layout.rs  lib.rs  main_entry.rs  parse.rs
crates/myth_render/: Cargo.toml
crates/myth_render/src/: lib.rs  renderer.rs  settings.rs
crates/myth_resources/: Cargo.toml
crates/myth_resources/src/: anti_aliasing.rs  binding.rs  bloom.rs  buffer.rs  builder.rs  fxaa.rs  gaussian_splat.rs  geometry.rs  handles.rs  image.rs  input.rs  lib.rs  mesh.rs  shader_defines.rs  ssao.rs  texture.rs  tone_mapping.rs  uniforms.rs
crates/myth_resources/src/material/: basic.rs  macros.rs  mod.rs  phong.rs  physical.rs  unlit.rs
crates/myth_resources/src/primitives/: box_shape.rs  mod.rs  plane.rs  sphere.rs
crates/myth_scene/: Cargo.toml
crates/myth_scene/src/: background.rs  camera.rs  day_night.rs  environment.rs  lib.rs  node.rs  scene.rs  skeleton.rs  transform_system.rs  wrapper.rs
demo_apps/gallery/: index.html  main.js  style.css  viewer.html
demo_apps/gltf_shower/: Cargo.toml  main.rs
demo_apps/gltf_viewer/: Cargo.toml  main.rs
demo_apps/gltf_viewer/web/: index.html
demo_apps/showcase/: Cargo.toml  main.rs
docs/: API.md  RenderGraph.md  RenderGraph_CN.md  UserGuide.md
examples/: app.rs  bloom.rs  box.rs  box_lights.rs  box_new.rs  box_pbr.rs  box_phong.rs  custom_material.rs  earth.rs  gaussian_splatting.rs  hdr_env.rs  headless_export.rs  headless_readback_test.rs  headless_stream_test.rs  hello_triangle.rs  helmet_gltf.rs  http_gltf.rs  michelle_gltf.rs  morph_target.rs  procedural_sky.rs  rotating_cube.rs  shadow_all_lights.rs  shadow_basic.rs  shadow_skinning.rs  shadow_spot.rs  shadows.rs  skin.rs  skinning.rs  skinning_shadows.rs  skybox.rs  sponza.rs
examples/assets/: README.md  facecap.glb
examples/flappy_bird/: main.rs
examples/gltf_show/: main.rs
examples/gltf_shower/: main.rs
examples/gltf_shower/web/: index.html  viewer.html
examples/gltf_viewer/: main.rs  main_lowlevel.rs  ui_pass.rs
examples/gltf_viewer/web/: build_wasm.bat  build_wasm.sh  index.html
examples/showcase/: main.rs
examples/showcase/web/: index.html  viewer.html
examples/tools/: lut_baker.rs
gltf_viewer/pkg/: gltf_viewer.js
pkg/: README.md  gltf_viewer.d.ts  gltf_viewer.js  gltf_viewer_bg.wasm.d.ts  package.json  showcase.js
scripts/: build_wasm.bat  build_wasm.sh
src/: engine.rs  errors.rs  lib.rs
src/animation/: action.rs  binder.rs  binding.rs  blending.rs  clip.rs  events.rs  mixer.rs  mod.rs  system.rs  tracks.rs  values.rs
src/app/: input.rs  mod.rs  window.rs
src/app/winit/: input_adapter.rs  mod.rs
src/assets/: handle.rs  io.rs  mod.rs  prefab.rs  server.rs  skeleton_asset.rs  storage.rs
src/assets/loaders/: gltf.rs  mod.rs
src/assets/shaders/: mesh_basic.wgsl
src/core/: assets.rs  binding.rs  buffer.rs  camera.rs  geometry.rs  image.rs  light.rs  material.rs  mesh.rs  mod.rs  node.rs  scene.rs  texture.rs  uniforms.rs  world.rs
src/render/: context.rs  mod.rs  settings.rs
src/render/data/: mod.rs  model_manager.rs  (+1 more)
src/renderer/: binding.rs  dynamic_buffer.rs  gpu_buffer.rs  gpu_image.rs  gpu_texture.rs  layout_generator.rs  mod.rs  model_buffer_manager.rs  object_manager.rs  pipeline.rs  resource_builder.rs  resource_manager.rs  settings.rs  shader_generator.rs  shader_manager.rs  tracked_render_pass.rs  uniform_packer.rs  uniforms.rs  vertex_layout.rs
src/resources/: bloom.rs  buffer.rs  fxaa.rs  geometry.rs  image.rs  input.rs  material.rs  material_builder.rs  mesh.rs  mod.rs  screen_space.rs  shader_defines.rs  ssao.rs  taa.rs  texture.rs  tone_mapping.rs  uniform_slot.rs  uniforms.rs  version_tracker.rs
src/scene/: background.rs  camera.rs  enviroment.rs  environment.rs  light.rs  manager.rs  mod.rs  node.rs  resolve.rs  scene.rs  skeleton.rs  transform.rs  transform_system.rs  wrapper.rs
src/utils/: fps_counter.rs  interner.rs  mod.rs  orbit_control.rs  time.rs
tests/: animation_tests.rs  asset_tests.rs  camera_frustum_tests.rs  geometry_tests.rs  headless_readback_test.rs  headless_stream_test.rs  headless_test.rs  resources_tests.rs  scene_tests.rs  shadow_tests.rs  transform_tests.rs
xtask/: Cargo.toml  README.md  README_zh.md
xtask/src/: main.rs
(+342 files in other folders)
