[package]
name = "myth-engine"
version = "0.1.0"
edition = "2024"
authors = ["Pan Xinmiao <pan_xinmiao@163.com>"]
description = "A developer-friendly, high-performance 3D rendering engine written in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/panxinmiao/myth"
homepage = "https://github.com/panxinmiao/myth"
readme = "README.md"
keywords = ["3d", "wgpu", "graphics", "gamedev", "engine"]
categories = ["game-development", "graphics", "rendering::engine"]

exclude = [
    "examples/assets/*", 
    "examples/gltf_viewer/web/assets/*", 
    "docs/images/*",
    ".github/*",
    ".gitignore"
]

[lib]
name = "myth"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# =================================================================
# Core Dependencies
# =================================================================
[dependencies]
# Graphics and Math
wgpu = { version = "28.0", features = ["wgsl"] } #
glam = { version = "0.32", features = ["bytemuck", "scalar-math"] }
bytemuck = { version = "1.25", features = ["derive", "min_const_generics"] }

# Windowing and Input
winit = { version = "0.30", optional = true }
raw-window-handle = "0.6"

# Resources and Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "hdr", "exr", "webp"] }
gltf = {git = "https://github.com/panxinmiao/gltf.git", rev = "077dd0af4fccd6bd441b210dc7f2cc1f2c5f1b9f", features = [
    "extensions", "KHR_materials_pbrSpecularGlossiness", 
    "KHR_materials_specular", "KHR_materials_emissive_strength", 
    "KHR_materials_ior", "KHR_texture_transform", "allow_empty_animation_target_node"
], optional = true }
base64 = "0.22"

# Networking (HTTP)
reqwest = { version = "0.13.2", default-features = false, optional = true }
url = { version = "2.5", optional = true }

# Utilities
thiserror = "2.0"
log = "0.4"
env_logger = "0.11.9"
pollster = "0.4"
paste = "1.0"
uuid = { version = "1.21.0", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
slotmap = { version = "1.1.1", features = ["serde"] } 
smallvec = "1.15"
half = "2.7"
rustc-hash = "2.1" 
lasso = { version = "0.7", features = ["multi-threaded"] } 
parking_lot = { version = "0.12", features = ["deadlock_detection"] } 
futures = "0.3.32"
bitflags = "2.11.0"

# Templating
minijinja = { version = "2.15", features = ["loader", "custom_syntax"] }
rust-embed = "8.11.0"

# =================================================================
# Native Platform (Windows, Linux, macOS)
# =================================================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.49", features = ["fs", "rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["default-tls", "stream"]} 

# =================================================================
# Web (WASM) Platform
# =================================================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Web Specific Libraries
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = [
    "Document", "Window", "Element", "DomTokenList", "HtmlCanvasElement", "HtmlInputElement",
    "Location", "Request", "RequestInit", "RequestMode", "Response", "Headers",
    "File", "FileList", "FileReader", "Blob", "ProgressEvent", "console",
    "UrlSearchParams"
]}
js-sys = "0.3.85"
web-time = "1.1"

# Logging and Panic Handling
console_error_panic_hook = "0.1.7"
console_log = "1.0"

rust-embed = { version = "8.11", features = ["debug-embed"] }
wgpu = { version = "28.0", features = ["webgpu", "webgl"] }

parking_lot = { version = "0.12", features = [] }
lasso = { version = "0.7", features = [] } 

# =================================================================
# Development Dependencies & Egui
# =================================================================
[dev-dependencies]
anyhow = "1.0.101"
rfd = { version = "0.17.2" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# --- Egui Configuration ---

# Native Egui
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.egui]
git = "https://github.com/emilk/egui.git"
rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.egui-wgpu]
git = "https://github.com/emilk/egui.git"
rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67"
features = ["winit"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.egui-winit]
git = "https://github.com/emilk/egui.git"
rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67"

# WASM Egui
[target.'cfg(target_arch = "wasm32")'.dev-dependencies.egui]
git = "https://github.com/emilk/egui.git"
rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.egui-wgpu]
git = "https://github.com/emilk/egui.git"
rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67"
features = ["winit"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.egui-winit]
git = "https://github.com/emilk/egui.git"
rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67"
default-features = false
features = ["links"]

[features]
default = ["winit", "gltf", "http"]
winit = ["dep:winit"]
gltf = ["dep:gltf"]
http = ["dep:reqwest", "dep:url"]

[lints.rust]

[lints.clippy]
all = { level = "warn", priority = -1 }

pedantic = { level = "warn", priority = -1 }

# special exceptions for graphics engine
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

module_name_repetitions = "allow"

missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_arguments = "allow"
doc_markdown = "allow"
too_many_lines = "allow"