[package]
name = "xtask"
description = "Build orchestration utilities for the Myth gallery and standalone apps."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
cargo_metadata = "0.23.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1.2"
walkdir = "2.5"
urlencoding = "2.1"

[lints]
workspace = true