[workspace]

[package]
name = "myth-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "myth_binding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.1", features = ["extension-module"] }
# Standalone / CI: use the git dependency instead:
# myth_engine = { git = "https://github.com/panxinmiao/myth.git", tag = "v0.1.0", package = "myth-engine" }
myth_engine = { path = "../../", package = "myth-engine" }

slotmap = "1"
raw-window-handle = "0.6"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
log = "0.4"
env_logger = "0.11.9"


# [patch."https://github.com/panxinmiao/myth.git"]
# myth-engine = { path = "../../" }
