[package]
name = "myth_animation"
description = "Animation system for the Myth engine (skeletal, morph target, property)."
keywords.workspace = true
categories.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
myth_core = { workspace = true }

glam = { workspace = true }
slotmap = { workspace = true }
rustc-hash = { workspace = true }
log = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
