[package]
name = "myth_app"
version = "0.1.0"
edition = "2024"
description = "Application framework and windowing integration for the Myth engine."
license = "MIT OR Apache-2.0"

[dependencies]
myth_core      = { workspace = true }
myth_resources = { workspace = true }
myth_animation = { workspace = true }
myth_scene     = { workspace = true }
myth_assets    = { workspace = true }
myth_render    = { workspace = true }

glam = { workspace = true }
log = { workspace = true }
raw-window-handle = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }

# Optional
winit = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
getrandom = { workspace = true }

[features]
default = []
winit = ["dep:winit"]

[lints]
workspace = true
