[package]
name = "myth_assets"
version = "0.1.0"
edition = "2024"
description = "Asset loading and management for the Myth engine."
license = "MIT OR Apache-2.0"

[dependencies]
myth_core      = { workspace = true }
myth_resources = { workspace = true }
myth_scene     = { workspace = true }
myth_animation = { workspace = true }

glam = { workspace = true }
slotmap = { workspace = true }
parking_lot = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
wgpu = { workspace = true }
futures = { workspace = true }
half = { workspace = true }
smallvec = { workspace = true }
bytemuck = { workspace = true }
rustc-hash = { workspace = true }

# Optional
gltf = { workspace = true, optional = true }
meshopt = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
reqwest = { workspace = true, features = ["default-tls", "stream"], optional = true }
parking_lot = { workspace = true, features = ["deadlock_detection"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }

[features]
default = []
gltf = ["dep:gltf"]
gltf-meshopt = ["gltf", "dep:meshopt"]
http = ["dep:reqwest", "dep:url"]

[lints]
workspace = true
