[package]
name = "myth_core"
description = "Core utilities and foundational types for the Myth engine."
keywords.workspace = true
categories.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
glam = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
lasso = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lasso = { workspace = true, features = ["multi-threaded"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { workspace = true }

[lints]
workspace = true
