[package]
name = "myth_resources"
version = "0.1.0"
edition = "2024"
description = "GPU resource definitions and data structures for the Myth engine."
license = "MIT OR Apache-2.0"

[dependencies]
myth_core = { workspace = true }

wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
slotmap = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
paste = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { workspace = true, features = ["deadlock_detection"] }

[lints]
workspace = true
