[package]
name = "myth_resources"
description = "GPU resource definitions and data structures for the Myth engine."
keywords.workspace = true
categories.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
myth_core = { workspace = true }

wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
slotmap = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
paste = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { workspace = true, features = ["deadlock_detection"] }

[lints]
workspace = true
