[package]
name = "myth_scene"
description = "Hierarchical scene graph for the Myth engine."
keywords.workspace = true
categories.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
myth_core      = { workspace = true }
myth_resources = { workspace = true }
myth_animation = { workspace = true }

glam = { workspace = true }
slotmap = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { workspace = true, features = ["deadlock_detection"] }

[features]
default = []
debug_view = []
3dgs = []

[lints]
workspace = true
